--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.navbar-nav .nav-item:hover .nav-link {
+  color: #ffffff;
+}
+
+.navbar-nav.ml-auto .nav-item {
+  margin-left: 10px;
+}
